WebCore/notifications/Notification.h
@@ -55,7 +55,7 @@ namespace WebCore {
 
     class Notification : public RefCounted<Notification>, public ActiveDOMObject, public EventTarget { 
     public:
-        static Notification* create(const String& url, ScriptExecutionContext* context, ExceptionCode& ec, NotificationPresenter* provider) { return new Notification(url, context, ec, provider); }
+        static Notification* create(const KURL& url, ScriptExecutionContext* context, ExceptionCode& ec, NotificationPresenter* provider) { return new Notification(url, context, ec, provider); }
         static Notification* create(const NotificationContents& contents, ScriptExecutionContext* context, ExceptionCode& ec, NotificationPresenter* provider) { return new Notification(contents, context, ec, provider); }
         
         virtual ~Notification();
@@ -65,7 +65,7 @@ namespace WebCore {
     
         bool isHTML() { return m_isHTML; }
         KURL url() { return m_notificationURL; }
-        KURL iconURL() { return m_iconURL; }
+        KURL iconURL() { return m_contents.icon(); }
         NotificationContents& contents() { return m_contents; }
 
         DEFINE_ATTRIBUTE_EVENT_LISTENER(display);
@@ -80,8 +80,8 @@ namespace WebCore {
         virtual Notification* toNotification() { return this; }
 
     private:
-        Notification(const String& url, ScriptExecutionContext* context, ExceptionCode& ec, NotificationPresenter* provider);
-        Notification(const NotificationContents& fields, ScriptExecutionContext* context, ExceptionCode& ec, NotificationPresenter* provider);
+        Notification(const KURL&, ScriptExecutionContext*, ExceptionCode&, NotificationPresenter*);
+        Notification(const NotificationContents&, ScriptExecutionContext*, ExceptionCode&, NotificationPresenter*);
 
         // EventTarget interface
         virtual void refEventTarget() { ref(); }
@@ -91,7 +91,6 @@ namespace WebCore {
 
         bool m_isHTML;
         KURL m_notificationURL;
-        KURL m_iconURL;
         NotificationContents m_contents;
 
         bool m_isShowing;
