WebCore/notifications/NotificationContents.h
@@ -38,17 +38,17 @@ namespace WebCore {
     class NotificationContents { 
     public:
         NotificationContents() {}
-        NotificationContents(const String& iconUrl, const String& title, const String& body) 
+        NotificationContents(const KURL& iconUrl, const String& title, const String& body)
             : m_icon(iconUrl)
             , m_title(title)
             , m_body(body) {}
 
-        String icon() const { return m_icon; }
+        KURL icon() const { return m_icon; }
         String title() const { return m_title; }
         String body() const { return m_body; }
 
     private:
-        String m_icon;
+        KURL m_icon;
         String m_title;
         String m_body;
     };
