WebKit/chromium/public/WebNotification.h
@@ -71,9 +71,6 @@ public:
     // If HTML, the URL which contains the contents of the notification.
     WEBKIT_API WebURL url() const;
 
-    // If not HTML, the parameters for the icon-title-text notification.
-    // FIXME: Deprecated; use iconURL() instead.
-    WEBKIT_API WebString icon() const;
     WEBKIT_API WebURL iconURL() const;
     WEBKIT_API WebString title() const;
     WEBKIT_API WebString body() const;
